Fix navigation on small screen

--- a/css/style.css
+++ b/css/style.css
@@ -482,7 +482,7 @@ div.section-text:nth-child(2) {
     flex-direction: column;
     align-items: center;
     padding-left: 0;
-    width: 100%;
+    width: 100vw;
     position: absolute;
     top: 100%;
     left: 0;
