--- a/sass/_nav.scss
+++ b/sass/_nav.scss
@@ -111,7 +111,7 @@
         flex-direction: column;
         align-items: center;
         padding-left: 0;
-        width: 100%;
+        width: 100vw;
         position: absolute;
         top: 100%;
         left: 0;
